--- a/mongose/package.json
+++ b/mongose/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "mostafa",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,5 +16,6 @@
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4"
-  }
+  },
+  "devDependencies": {}
 }
